SightingList can now map location names to eBird submission ID's show location names for days (trips) with multiple locations

--- a/app/templates/taxon.html
+++ b/app/templates/taxon.html
@@ -7,7 +7,7 @@
 
 {{> thumbnails}}
 
-<h4>{{nicenumber sightingList.rows.length}} sightings</h4>
+<h4>{{nicenumber sightingList.rows.length}} sightings at {{valuecount sightingList "Location"}} locations</h4>
 
 {{#if this.showChart}}
 	<div id={{chartID}} style='padding-top: 10px'></div>
