--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,6 +1,6 @@
 <h3>Welcome to BirdWalker</h3>
 
-<h4>Photo Of The Week</h4>
+<h4>Seasonal Sights</h4>
 
 <img src="{{photoOfTheWeek.[Photo URL]}}">
 
