add link to ebird submissions for single-location days

--- a/app/templates/trip.html
+++ b/app/templates/trip.html
@@ -22,6 +22,7 @@
 {{else}}
   <h4>
     {{valuecount sightingList "Common Name"}} species at {{values sightingList "Location"}}
+    <a target='_blank' href='http://ebird.org/ebird/view/checklist?subID={{values sightingList "Submission ID"}}'><img src='/images/ebird-favicon.png' /></a>
   </h4>
 {{/if}}
 
