make graphs smaller and consistent using new global var for height and CSS style for width

--- a/app/templates/county.html
+++ b/app/templates/county.html
@@ -2,7 +2,7 @@
 
 {{> thumbnails}}
 
-<div id={{chartID}} style='padding-top: 10px'></div>
+<div id={{chartID}} class='bargraph'></div>
 
 {{monthgraph sightingsByMonth chartID}}
 
