--- a/app/templates/stats.html
+++ b/app/templates/stats.html
@@ -7,12 +7,12 @@ from {{nicedate earliest}} - {{nicedate latest}}
 
 <h4>Sightings by Year</h4>
 
-<div id={{yearChartID}} style='padding-top: 10px'></div>
+<div id={{yearChartID}} class='bargraph'></div>
 
 {{bargraph sightingsByYear yearChartID}}
 
 <h4>Sightings by Month</h4>
 
-<div id={{monthChartID}} style='padding-top: 10px'></div>
+<div id={{monthChartID}} class='bargraph'></div>
 
 {{monthgraph sightingsByMonth monthChartID}}
