--- a/app/templates/trip.html
+++ b/app/templates/trip.html
@@ -1,9 +1,5 @@
 <h3>{{nicedate tripDate}} <span class='lighter'>{{customName}}</span></h3>
 
-{{#each comments}}
-  <div style='font-style: italic'>{{this}}</div>
-{{/each}}
-
 {{> thumbnails}}
 
 {{#if (multiplevalues sightingList "Location")}}
@@ -12,9 +8,10 @@
   <div class='biglist'>
   {{#each locationToSubmissionID}}
     <div class='biglist-item'>
-      <a target='_blank' href='#location/{{encode @key}}'>{{@key}}</a>
+      <a href='#location/{{encode @key}}'>{{@key}}</a>
       <a target='_blank' href='http://ebird.org/ebird/view/checklist?subID={{this}}'><img src='/images/ebird-favicon.png' /></a>
     </div>
+    <div style='font-size: 80%; margin-left: 1em'><i>{{lookup ../submissionIDToChecklistComments this}}</i></div>
   {{/each}}
   </div>
 
