show checklist comments for single-checklist days

--- a/app/templates/trip.html
+++ b/app/templates/trip.html
@@ -21,6 +21,9 @@
     {{valuecount sightingList "Common Name"}} species at {{values sightingList "Location"}}
     <a target='_blank' href='http://ebird.org/ebird/view/checklist?subID={{values sightingList "Submission ID"}}'><img src='/images/ebird-favicon.png' /></a>
   </h4>
+  {{#each locationToSubmissionID}}
+    <div style='font-size: 80%; margin-left: 1em'><i>{{lookup ../submissionIDToChecklistComments this}}</i></div>
+  {{/each}}
 {{/if}}
 
 <div class="biglist">
