simple toggling menu from http://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_topnav

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -32,11 +32,6 @@
 	line-height: 1.5;
 }
 
-.menubar a {
-	padding-right: 1em;
-	text-transform: capitalize;
-}
-
 .lighter {
 	color: #999;
 }
@@ -52,4 +47,54 @@ a img {
 .bargraph {
 	padding-top: 10px;
 	width: 400px;
+}
+
+
+/* --------------------- MENU -------------------------------- */
+
+ul.topnav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+ul.topnav li {
+  float: left;
+}
+
+ul.topnav li a {
+  display: inline-block;
+  text-align: center;
+  padding-right: 14px;
+  text-decoration: none;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+ul.topnav li.icon {display: none;}
+
+@media screen and (max-width:680px) {
+  ul.topnav li:not(:first-child) {display: none;}
+  ul.topnav li.icon {
+    float: right;
+    display: inline-block;
+  }
+}
+
+@media screen and (max-width:680px) {
+  ul.topnav.responsive {position: relative;}
+  ul.topnav.responsive li.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  ul.topnav.responsive li {
+    float: none;
+    display: inline;
+  }
+  ul.topnav.responsive li a {
+    display: block;
+    text-align: left;
+  }
 }
