rework REST API for locations to have hierarchical URL's rework frontend to have hierarchical URL's for locations TODO: fix link from photo to URL

--- a/app/templates/location.html
+++ b/app/templates/location.html
@@ -2,7 +2,7 @@
 	{{sightingList.rows.0.Location}}
 	<span class='lighter'>
 		{{#if sightingList.rows.0.County}}
-			<a href="#county/{{sightingList.rows.0.County}}">{{sightingList.rows.0.County}} County</a>,
+			<a href="#place/{{sightingList.rows.0.[State/Province]}}/{{sightingList.rows.0.County}}">{{sightingList.rows.0.County}} County</a>,
 		{{/if}}
 		{{sightingList.rows.0.[Region]}},
 		{{sightingList.rows.0.[Country]}}
