--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -5,10 +5,10 @@
 		<h3>{{@key}}</h3>
 		{{#each this}}
 			{{#if @key}}
-				<h4><a href="#county/{{encode @key}}">{{@key}} County</a></h4>
+				<h4><a href="#place/{{@../key}}/{{encode @key}}">{{@key}} County</a></h4>
 			{{/if}}
 			{{#each this}}
-				<div class='biglist-item'><a href="#location/{{encode this}}">{{this}}</a></div>
+				<div class='biglist-item'><a href="#place/{{@../../key}}/{{addnone @../key}}/{{encode this}}">{{this}}</a></div>
 			{{/each}}
 		{{/each}}
 	{{/each}}
