addresses one case in issue #56

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,7 +6,7 @@
 
 <div>
 	<a href="#taxon/{{encode photoOfTheWeek.[Common Name]}}">{{photoOfTheWeek.[Common Name]}}</a>,
-	<a href="#location/{{encode photoOfTheWeek.[Location]}}">{{photoOfTheWeek.[Location]}}</a>,
+	<a href="#place/{{encode photoOfTheWeek.[State/Province]}}/{{addnone photoOfTheWeek.[County]}}/{{encode photoOfTheWeek.[Location]}}">{{photoOfTheWeek.[Location]}}</a>,
 	<a href="#trip/{{ebirddate photoOfTheWeek.[DateObject]}}">{{nicedate photoOfTheWeek.DateObject}}</a>
 </div>
 
