add some more photos. Make sure new JSON snippets for photos have county and state

--- a/app/templates/sighting.html
+++ b/app/templates/sighting.html
@@ -13,6 +13,8 @@
     "Scientific Name": "{{[Scientific Name]}}",
     "Common Name": "{{[Common Name]}}",
     "Thumbnail URL": "https://dl.dropboxusercontent.com/u/171684/birdwalker/thumb/{{sortabledate this.DateObject}}-{{spacetodash [Scientific Name]}}-NNNNNN.jpg",
-    "Photo URL": "https://dl.dropboxusercontent.com/u/171684/birdwalker/photo/{{sortabledate this.DateObject}}-{{spacetodash [Scientific Name]}}-NNNNNN.jpg"
+    "Photo URL": "https://dl.dropboxusercontent.com/u/171684/birdwalker/photo/{{sortabledate this.DateObject}}-{{spacetodash [Scientific Name]}}-NNNNNN.jpg",
+    "County": "{{this.County}}",
+    "State/Province": "{{this.[State/Province]}}"
   }
 </pre>
