add a place report for States/Provinces, to complete the place hierarchy

--- a/app/templates/state.html
+++ b/app/templates/state.html
@@ -1,4 +1,4 @@
-<h3>{{name}} County <span class='lighter'><a href='#place/{{State}}'>{{lookupState State}}</a>, {{Country}}</span></h3>
+<h3>{{lookupState State}}, <span class='lighter'>{{Country}}</span></h3>
 
 {{> thumbnails}}
 
