--- a/app/templates/taxons.html
+++ b/app/templates/taxons.html
@@ -2,10 +2,6 @@
 
 <div class="biglist">
 	{{#each hierarchy}}
-		<h3><a href='#family/{{@key}}'>{{stripLatinFromEbirdFamily @key}}</a></h3>
-
-		{{#each this}}
-			<div class='biglist-item'><a href="#taxon/{{encode this}}">{{this}}</a></div>
-		{{/each}}
+		<div><a href='#family/{{@key}}'>{{stripLatinFromEbirdFamily @key}}</a></div>
 	{{/each}}
 </div>
