add some introductory text

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,6 @@
-<h3>Welcome to BirdWalker</h3>
+<p>Welcome to birdWalker, a website of birding photos and trip reports by Bill Walker and Mary Wisnewski, California birders based in Santa Clara County. We've been collecting our trip reports since 1996, we have now recorded 857 trips and 784 species.</p>
+
+<p>Some of our favorite places to go birding include Charleston Slough and the Duck Pond in Palo Alto, Sacramento National Wildlife Refuge, and the Rio Grande Valley in Texas.</p>
 
 <h4>Seasonal Sights</h4>
 
