--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -48,3 +48,23 @@ a img {
 	padding-top: 10px;
 	width: 400px;
 }
+
+
+
+ul.first {
+  padding:0 0 0 0;
+  margin:0 0 40px 0;
+}
+ul.first li {
+  list-style:none;
+  margin-bottom:10px;
+}
+
+.text {
+color:#666;
+font-size:11px;
+margin-bottom:10px;
+padding:12px;
+background:#eee;
+}
+
