--- a/app/templates/state.html
+++ b/app/templates/state.html
@@ -9,9 +9,16 @@
 <h4>{{valuecount sightingList "Location"}} Locations</h4>
 
 <div class="biglist">
-  {{#each (values sightingList "Location")}}
-    <div class='biglist-item'><a href="#place/{{../State}}/{{../name}}/{{encode this}}">{{this}}</a></div>
-  {{/each}}
+	{{#each hierarchy}}
+		{{#each this}}
+			{{#if @key}}
+				<h4><a href="#place/{{@../key}}/{{encode @key}}">{{@key}} County</a></h4>
+			{{/if}}
+			{{#each this}}
+				<div class='biglist-item'><a href="#place/{{@../../key}}/{{addnone @../key}}/{{encode this}}">{{this}}</a></div>
+			{{/each}}
+		{{/each}}
+	{{/each}}
 </div>
 
 <h4>{{valuecount sightingList "Common Name"}} Species on {{sightingList.dateObjects.length}} Dates</h4>
