--- a/app/templates/county.html
+++ b/app/templates/county.html
@@ -16,10 +16,4 @@
 
 <h4>{{valuecount sightingList "Common Name"}} Species on {{sightingList.dateObjects.length}} Dates</h4>
 
-<div class="biglist">
-{{#each (values sightingList "Common Name")}}
-  <div class='biglist-item'>
-    <a href="#taxon/{{encode this}}">{{this}}</a>
-  </div>
-{{/each}}
-</div>
+{{> specieslist}}
