--- a/app/templates/family.html
+++ b/app/templates/family.html
@@ -8,13 +8,7 @@
 
 <h4>{{valuecount sightingList "Common Name"}} Species on {{sightingList.dateObjects.length}} Dates</h4>
 
-<div class="biglist">
-{{#each (values sightingList "Common Name")}}
-  <div class='biglist-item'>
-    <a href="#taxon/{{encode this}}">{{this}}</a>
-  </div>
-{{/each}}
-</div>
+{{> specieslist}}
 
 <h4>{{valuecount sightingList "Location"}} Locations</h4>
 
