--- a/app/templates/location.html
+++ b/app/templates/location.html
@@ -21,13 +21,7 @@
 
 <h4>{{valuecount sightingList "Common Name"}} Species</h4>
 
-<div class="biglist">
-{{#each (values sightingList "Common Name")}}
-  <div class='biglist-item'>
-    <a href="#taxon/{{encode this}}">{{this}}</a>
-  </div>
-{{/each}}
-</div>
+{{> specieslist}}
 
 <h4>{{valuecount sightingList "Date"}} Dates</h4>
 
