move data into a more sensible place

--- a/app/templates/location.html
+++ b/app/templates/location.html
@@ -19,8 +19,8 @@
 
 {{> thumbnails}}
 
-<div id="{{mapID}}" style='height: 300px; width: 400px' data-lat='{{sightingList.rows.0.Latitude}}' data-long='{{sightingList.rows.0.Longitude}}'></div>
-{{googlemap "moo" mapID}}
+<div id="{{mapID}}" style='height: 300px; width: 400px'></div>
+{{googlemap sightingList mapID}}
 
 <h4>{{valuecount sightingList "Common Name"}} Species</h4>
 
