--- a/app/templates/taxon.html
+++ b/app/templates/taxon.html
@@ -23,3 +23,6 @@
 		{{/each}}
 	</div>
 {{/if}}
+
+<div id="{{mapID}}" class="embed-responsive embed-responsive-16by9"></div>
+{{googlemap sightingList mapID}}
