fix maps to show all markers add maps to some pages fix section headings in some pages

--- a/app/templates/county.html
+++ b/app/templates/county.html
@@ -2,18 +2,25 @@
 
 {{> thumbnails}}
 
-<div id={{chartID}} class='bargraph'></div>
+<h4>{{sightingList.dateObjects.length}} Dates</h4>
 
+<div id={{chartID}} class='bargraph'></div>
 {{monthgraph sightingsByMonth chartID}}
+
+<h4>{{valuecount sightingList "Common Name"}} Species</h4>
+
+{{> specieslist}}
 
 <h4>{{valuecount sightingList "Location"}} Locations</h4>
 
-<div class="biglist">
-  {{#each (values sightingList "Location")}}
-    <div class='biglist-item'><a href="#place/{{../State}}/{{../name}}/{{encode this}}">{{this}}</a></div>
-  {{/each}}
-</div>
+{{#if showMap}}
+	<div id="{{mapID}}" class="embed-responsive embed-responsive-16by9"></div>
+	{{googlemap sightingList mapID}}
+{{else}}
 
-<h4>{{valuecount sightingList "Common Name"}} Species on {{sightingList.dateObjects.length}} Dates</h4>
-
-{{> specieslist}}
+	<div class="biglist">
+	  {{#each (locations sightingList)}}
+	    <div class='biglist-item'><a href="#place/{{this.[0]}}/{{addnone this.[1]}}/{{this.[2]}}">{{this.[2]}}</a></div>
+	  {{/each}}
+	</div>
+{{/if}}
