--- a/app/templates/trip.html
+++ b/app/templates/trip.html
@@ -54,3 +54,7 @@
     {{/each}}
   {{/if}}
 </div>
+
+<div id="{{mapID}}" class="embed-responsive embed-responsive-16by9"></div>
+{{googlemap sightingList mapID}}
+
