--- a/app/templates/family.html
+++ b/app/templates/family.html
@@ -2,18 +2,26 @@
 
 {{> thumbnails}}
 
-<div id={{chartID}} class='bargraph'></div>
+<h4>{{sightingList.dateObjects.length}} Dates</h4>
 
+<div id={{chartID}} class='bargraph'></div>
 {{monthgraph sightingsByMonth chartID}}
 
-<h4>{{valuecount sightingList "Common Name"}} Species on {{sightingList.dateObjects.length}} Dates</h4>
+<h4>{{valuecount sightingList "Common Name"}} Species</h4>
 
 {{> specieslist}}
 
 <h4>{{valuecount sightingList "Location"}} Locations</h4>
 
-<div class="biglist">
-  {{#each (locations sightingList)}}
-    <div class='biglist-item'><a href="#place/{{this.[0]}}/{{addnone this.[1]}}/{{this.[2]}}">{{this.[2]}}</a></div>
-  {{/each}}
-</div>
+{{#if showMap}}
+	<div id="{{mapID}}" class="embed-responsive embed-responsive-16by9"></div>
+	{{googlemap sightingList mapID}}
+{{else}}
+
+	<div class="biglist">
+	  {{#each (locations sightingList)}}
+	    <div class='biglist-item'><a href="#place/{{this.[0]}}/{{addnone this.[1]}}/{{this.[2]}}">{{this.[2]}}</a></div>
+	  {{/each}}
+	</div>
+{{/if}}
+
