--- a/app/templates/family.html
+++ b/app/templates/family.html
@@ -4,8 +4,18 @@
 
 <h4>{{sightingList.dateObjects.length}} Dates</h4>
 
-<div id={{chartID}} class='bargraph'></div>
-{{monthgraph sightingsByMonth chartID}}
+{{#if showDates}}
+	<div class="biglist">
+	{{#each sightingList.dateObjects}}
+	  <div class='biglist-item'>
+	    <div><a href="#trip/{{ebirddate this}}">{{nicedate this}}</a> {{lookup ../customDayNames (ebirddate this)}}</div>
+	  </div>
+	{{/each}}
+	</div>
+{{else}}
+	<div id={{chartID}} class='bargraph'></div>
+	{{monthgraph sightingsByMonth chartID}}
+{{/if}}
 
 <h4>{{valuecount sightingList "Common Name"}} Species</h4>
 
@@ -13,11 +23,7 @@
 
 <h4>{{valuecount sightingList "Location"}} Locations</h4>
 
-{{#if showMap}}
-	<div id="{{mapID}}" class="embed-responsive embed-responsive-16by9"></div>
-	{{googlemap sightingList mapID}}
-{{else}}
-
+{{#if showLocations}}
 	<div class="biglist">
 	  {{#each (locations sightingList)}}
 	    <div class='biglist-item'><a href="#place/{{this.[0]}}/{{addnone this.[1]}}/{{this.[2]}}">{{this.[2]}}</a></div>
@@ -25,3 +31,5 @@
 	</div>
 {{/if}}
 
+<div id="{{mapID}}" class="embed-responsive embed-responsive-16by9"></div>
+{{googlemap sightingList mapID}}
