add some links from front page to encourage exploration

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,12 @@
 	<div class='col-md-6'>
 		<p>Welcome to birdWalker, a website of birding photos and trip reports by Bill Walker and Mary Wisnewski, California birders based in Santa Clara County. We've been collecting our trip reports since 1996, we have now recorded 857 trips and 784 species.</p>
 
-		<p>Some of our favorite places to go birding include Charleston Slough and the Duck Pond in Palo Alto, Sacramento National Wildlife Refuge, and the Rio Grande Valley in Texas.</p>
+		<p>Some of our favorite places to go birding include
+			<a href='#place/US-CA/Santa Clara/Charleston Slough'>Charleston Slough</a> and
+			<a href='#place/US-CA/Santa Clara/Palo Alto Duck Pond'>the Duck Pond</a> in Palo Alto,
+			<a href='http://localhost:8090/#place/US-CA/Glenn'>Sacramento National Wildlife Refuge</a>, and
+			<a href='#place/US-TX/Hidalgo'>the Rio Grande Valley</a> in Texas.
+		</p>
 	</div>
 
 	<div class='col-md-6'>
