--- a/app/templates/photos.html
+++ b/app/templates/photos.html
@@ -4,9 +4,9 @@
 	{{#each hierarchy}}
 		<div class='biglist-item'>
 			{{#with (random ../photosByFamily @key)}}
-			<div class="media">
+			<div class="media" style='padding-bottom: 10px'>
 				<div class="media-left">
-					<a href='#family/{{@key}}'><img width='85px' height='85px' src='{{[Thumbnail URL]}}' /></a>
+					<a href='#family/{{@key}}'><img class='media-object' width='85px' height='85px' src='{{[Thumbnail URL]}}' /></a>
 				</div>
 				<div class="media-body">
 					<h4 class="media-heading"><a href='#family/{{@key}}'>{{stripLatinFromEbirdFamily @key}}</a></h4>
