--- a/app/templates/photos.html
+++ b/app/templates/photos.html
@@ -1,18 +1,47 @@
-<h3>{{nicenumber numPhotos}} photos of {{nicenumber numSpecies}} species</h3>
+<div class='row jumbotron'>
+	<div class='col-md-8'>
+		<h3>Welcome to BirdWalker</h3>
 
-<div class="biglist">
-	{{#each hierarchy}}
-		<div class='biglist-item'>
-			{{#with (random ../photosByFamily @key)}}
-			<div class="media" style='padding-bottom: 10px'>
-				<div class="media-left">
-					<a href='#family/{{@key}}'><img class='media-object' width='85px' height='85px' src='{{[Thumbnail URL]}}' /></a>
-				</div>
-				<div class="media-body">
-					<h4 class="media-heading"><a href='#family/{{@key}}'>{{stripLatinFromEbirdFamily @key}}</a></h4>
-				</div>
-			</div>
-			{{/with}}
+		<p>Birding photos and trip reports by Bill Walker and Mary Wisnewski, California birders based in Santa Clara County. We've been collecting our trip reports since 1996.</p>
+
+		<p>Some of our favorite places to go birding include
+			<a href='#place/US-CA/Santa Clara/Charleston Slough'>Charleston Slough</a> and
+			<a href='#place/US-CA/Santa Clara/Palo Alto Duck Pond'>the Duck Pond</a> in Palo Alto,
+			<a href='http://localhost:8090/#place/US-CA/Glenn'>Sacramento National Wildlife Refuge</a>, and
+			<a href='#place/US-TX/Hidalgo'>the Rio Grande Valley</a> in Texas.
+		</p>
+	</div>
+
+	<div class='col-md-4'>
+		<img class='img-responsive' src="{{photosThisWeek.[0].[Photo URL]}}">
+
+		<div>
+			<a href="#taxon/{{encode photosThisWeek.[0].[Common Name]}}">{{photosThisWeek.[0].[Common Name]}}</a>,
+			<a href="#place/{{encode photosThisWeek.[0].[State/Province]}}/{{addnone photosThisWeek.[0].[County]}}/{{encode photosThisWeek.[0].[Location]}}">{{photosThisWeek.[0].[Location]}}</a>,
+			{{photosThisWeek.[0].Date}}
 		</div>
-	{{/each}}
+	</div>
+</div>
+
+<div class='row'>
+	<div class='col-md-12'>
+		<h3>Browse photos of {{nicenumber numSpecies}} species by Family</h3>
+
+		<div class="biglist">
+			{{#each hierarchy}}
+				<div class='biglist-item'>
+					{{#with (random ../photosByFamily @key)}}
+					<div class="media" style='padding-bottom: 10px'>
+						<div class="media-left">
+							<a href='#family/{{@key}}'><img class='media-object' width='85px' height='85px' src='{{[Thumbnail URL]}}' /></a>
+						</div>
+						<div class="media-body">
+							<a href='#family/{{@key}}'>{{stripLatinFromEbirdFamily @key}}</a>
+						</div>
+					</div>
+					{{/with}}
+				</div>
+			{{/each}}
+		</div>
+	</div>
 </div>
