--- a/app/templates/chrono.html
+++ b/app/templates/chrono.html
@@ -1,4 +1,4 @@
-<h3>{{nicenumber firstSightings.length}} species</h3>
+<h3>Our Life List <span class='lighter'>{{nicenumber firstSightings.length}} species</span></h3>
 
 <div class="biglist">
 {{#each firstSightings}}
