make the page title more sensible

--- a/app/templates/taxons.html
+++ b/app/templates/taxons.html
@@ -1,4 +1,4 @@
-<h3>{{nicenumber lifeSightingsCount}} species</h3>
+<h3>Our Life List <span class='lighter'>{{nicenumber lifeSightingsCount}} species</span></h3>
 
 <div class="biglist">
 	{{#each hierarchy}}
