--- a/app/templates/year.html
+++ b/app/templates/year.html
@@ -5,3 +5,8 @@
 <h4>{{valuecount sightingList "Common Name"}} Species</h4>
 
 {{> specieslist}}
+
+<h4>{{valuecount sightingList "Location"}} Locations</h4>
+
+<div id="{{mapID}}" class="embed-responsive embed-responsive-16by9"></div>
+{{googlemap sightingList mapID}}
