--- a/app/templates/sighting.html
+++ b/app/templates/sighting.html
@@ -12,8 +12,8 @@
     "Location": "{{this.Location}}",
     "Scientific Name": "{{[Scientific Name]}}",
     "Common Name": "{{[Common Name]}}",
-    "Thumbnail URL": "https://dl.dropboxusercontent.com/u/171684/birdwalker/thumb/{{sortabledate this.DateObject}}-{{spacetodash [Scientific Name]}}-NNNNNN.jpg",
-    "Photo URL": "https://dl.dropboxusercontent.com/u/171684/birdwalker/photo/{{sortabledate this.DateObject}}-{{spacetodash [Scientific Name]}}-NNNNNN.jpg",
+    "Thumbnail URL": "https://s3.amazonaws.com/birdwalker/thumb/{{sortabledate this.DateObject}}-{{spacetodash [Scientific Name]}}-NNNNNN.jpg",
+    "Photo URL": "https://s3.amazonaws.com/birdwalker/photo/{{sortabledate this.DateObject}}-{{spacetodash [Scientific Name]}}-NNNNNN.jpg",
     "County": "{{this.County}}",
     "State/Province": "{{this.[State/Province]}}"
   }
