add photos species count

--- a/app/templates/photos.html
+++ b/app/templates/photos.html
@@ -25,6 +25,8 @@
 	</div>
 </div>
 
+<h3>{{numSpecies}} species photographed</h3>
+
 <div class='row'>
 	{{#each hierarchy}}
 		{{#with (random ../photosByFamily @key)}}
