--- a/app/templates/trip.html
+++ b/app/templates/trip.html
@@ -2,10 +2,13 @@
 
 {{> thumbnails}}
 
-{{#if (multiplevalues sightingList "Location")}}
-  <h4>{{valuecount sightingList "Location"}} locations</h4>
+{{#if (multiplevalues sightingList "Submission ID")}}
+  <h4>{{valuecount sightingList "Submission ID"}} eBird Checklists</h4>
+{{else}}
+  <h4>1 eBird Checklist</h4>
+{{/if}}
 
-  <div class='biglist'>
+<div class='biglist'>
   {{#each (values sightingList "Submission ID")}}
     <div class='biglist-item'>
       {{#with (lookup ../submissionIDToSighting this)}}
@@ -13,29 +16,25 @@
           {{[Location]}}
         </a>
       {{/with}}
+
       <a target='_blank' href='http://ebird.org/ebird/view/checklist?subID={{this}}'>
         <img src='/images/ebird-favicon.png' />
       </a>
-    </div>
-    <div style='font-size: 80%; margin-left: 1em'>
-      {{#with (lookup ../submissionIDToSighting this)}}
-        <div>{{Protocol}}, {{[Duration (Min)]}}mins, {{[Time]}}</div>
-        <i>{{[Checklist Comments]}}</i>
-      {{/with}}
-    </div>
-  {{/each}}
-  </div>
 
-  <h4>{{valuecount sightingList "Common Name"}} species</h4>
-{{else}}
-  <h4>
-    {{valuecount sightingList "Common Name"}} species at {{values sightingList "Location"}}
-    <a target='_blank' href='http://ebird.org/ebird/view/checklist?subID={{values sightingList "Submission ID"}}'><img src='/images/ebird-favicon.png' /></a>
-  </h4>
-  {{#each (values sightingList "Submission ID")}}
-    <div style='font-size: 80%; margin-left: 1em'><i>{{#with (lookup ../submissionIDToSighting this)}}{{[Checklist Comments]}}{{/with}}</i></div>
+      <div style='font-size: 80%; margin-left: 1em'>
+        {{#with (lookup ../submissionIDToSighting this)}}
+          <div>{{Protocol}}, {{[Duration (Min)]}}mins, {{[Time]}}</div>
+          <i>{{[Checklist Comments]}}</i>
+        {{/with}}
+      </div>
+
+    </div>
   {{/each}}
-{{/if}}
+</div>
+
+<h4>
+  {{valuecount sightingList "Common Name"}} Species
+</h4>
 
 <div class="biglist">
   {{#if (multiplevalues sightingList "Location")}}
@@ -59,6 +58,14 @@
     {{/each}}
   {{/if}}
 </div>
+
+{{#if (multiplevalues sightingList "Location")}}
+  <h4>{{valuecount sightingList "Location"}} Locations</h4>
+{{else}}
+  <h4>
+    {{values sightingList "Location"}}
+  </h4>
+{{/if}}
 
 <div id="{{mapID}}" class="embed-responsive embed-responsive-16by9"></div>
 {{googlemap sightingList mapID}}
